"automated reward system implemented"

--- a/smart-contracts/.env.example
+++ b/smart-contracts/.env.example
@@ -11,5 +11,9 @@ COINMARKETCAP_API_KEY=your_coinmarketcap_api_key_here
 # Gas Reporter
 REPORT_GAS=true
 
+# Contract addresses
+DEV_TOKEN_ADDRESS=deployed_dev_token_address
+TASK_REWARD_MANAGER_ADDRESS=deployed_task_reward_manager_address
+
 # Contract verification
 CONTRACT_ADDRESS=deployed_contract_address_for_verification
