--- a/backend/.env.example
+++ b/backend/.env.example
@@ -31,8 +31,11 @@ SONARQUBE_TOKEN=your_sonarqube_token
 INFURA_API_KEY=your_infura_api_key
 POLYGON_RPC_URL=https://polygon-rpc.com
 POLYGON_MUMBAI_RPC_URL=https://rpc-mumbai.maticvigil.com
-CONTRACT_ADDRESS=your_deployed_contract_address
+SEPOLIA_RPC_URL=https://eth-sepolia.g.alchemy.com/v2/YOUR_ALCHEMY_API_KEY
+DEV_TOKEN_ADDRESS=your_deployed_dev_token_address
+TASK_REWARD_MANAGER_ADDRESS=your_deployed_task_reward_manager_address
 MNEMONIC=your_wallet_mnemonic_phrase
+PRIVATE_KEY=your_wallet_private_key
 
 # Admin Configuration
 ADMIN_EMAIL=admin@example.com
